# tuzue

./: .gitignore  README.md  flake.nix  pyproject.toml  setup.cfg  setup.py
.github/actions/sphinx/: Dockerfile  action.yml
.github/workflows/: ci.yml
demos/: demo.py  demo1.py  run-demo1.sh  run-demos.sh
docs/: conf.py  index.rst  modules.rst  tuzue.rst  tuzue.ui.rst
src/: tuzue-test
src/tuzue/: __init__.py  binput.py  input.py  inspect.py  inspector.py  logger.py  view.py
src/tuzue/ui/: curses.py  tcurses.py
tests/: test_binput.py  test_input.py  test_view.py
