# Copyright (C) 2022 Leandro Lisboa Penz <lpenz@lpenz.org>
# This file is subject to the terms and conditions defined in
# file 'LICENSE', which is part of this source code package.

[metadata]
name = tuzue
version = attr: tuzue.__version__
description = Fuzzy-filtering menu-based interactive curses interface
    for python, plus utilities
license = MIT
license_files = LICENSE
description_file =
    README.md
author = "Leandro Lisboa Penz"
author_email = "lpenz@lpenz.org"
url = http://github.com/lpenz/tuzue
classifiers =
    Development Status :: 1 - Planning
    Environment :: Console
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 2
    Programming Language :: Python :: 3

[options]
package_dir =
    = src
packages = find:
scripts =
    src/bin/tuzue-chdir
python_requires = >=3.6

[options.packages.find]
where = src

[options.data_files]
share/doc/python-tuzue =
    README.md
    LICENSE
    AUTHORS

[options.extras_require]
test =
    pytest
    pytest-cov
    pyftpdlib
