# Copyright (C) 2022 Leandro Lisboa Penz <lpenz@lpenz.org>
# This file is subject to the terms and conditions defined in
# file 'LICENSE', which is part of this source code package.

[metadata]
name = tuzue
version = 0.1.3
description = Fuzzy-filtering menu-based interactive curses interface
    for python, plus utilities
license = MIT
license_files = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown
author = "Leandro Lisboa Penz"
author_email = "lpenz@lpenz.org"
url = http://github.com/lpenz/tuzue
classifiers =
    Development Status :: 1 - Planning
    Environment :: Console
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 2
    Programming Language :: Python :: 3

[options]
package_dir =
    = src
packages = find:
scripts =
    src/bin/tuzue-chdir
    src/bin/tuzue-json
    src/bin/tuzue-manmenu
python_requires = >=3.6

[options.packages.find]
where = src

[options.data_files]
share/doc/python-tuzue =
    README.md
    LICENSE
    AUTHORS
    demos/demo-navigate.gif
    demos/demo-pdb.gif

[options.extras_require]
test =
    pytest
    pytest-cov
    pyftpdlib
